<resources>
    <string name="app_name">WriteMe</string>
    <string name="registration_button">Зарегистрироваться</string>
    <string name="hint_editText_password">Пароль</string>
    <string name="hint_editText_email">Email</string>
    <string name="hint_editText_username">Имя пользователя</string>
    <string name="already_registered">Уже зарегистрированы?</string>
    <string name="log_in_button">Войти</string>
    <string name="select_photo">Выбрать фото</string>
    <string name="menu_new_message">Новое сообщение</string>
    <string name="menu_sign_out">Выход</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

<!--    Menu items in LatestMessagesActivity.kt-->
    <string name="input_message_in_chat">Введите сообщение</string>
    <string name="send_message_in_chat">Отправить</string>
    <string name="edit_profile">Редактировать профиль</string>

<!--    Delete account in EditProfileActivity.kt -->
    <string name="menu_delete_user">Удалить аккаунт</string>

<!--    Popup menu in LatestMessagesActivity.kt-->
    <string name="go_over_in_chat">Перейти к диалогу</string>
    <string name="delete_messages">Удалить переписку</string>

<!--    Popup menu in ChatLogActivity.kt-->
    <string name="delete_from_me">Удалить у меня</string>
    <string name="delete_from_both">Удалить у обоих</string>
    <string name="edit_message">Редактировать сообщение</string>

<!--    Edit message in ChatLogActivity.kt-->
    <string name="input_new_message">Введите новое сообщение</string>

<!--    Menu item reference-->
    <string name="menu_item_reference">Справка</string>

<!--    Reference about application-->
    <string name="text_reference">
        \t\tПриложение WriteMe предназначено для обмена сообщениями между зарегистрированными в нем пользователями.
        \n\t\tДля регистрации необходимо ввести все обязательные для этого данные (наличие фото не является обязательным условием
        регистрации). Если Вы уже зарегистрированы в приложении, нажмите на фразу \"Уже зарегистрированы?\" и введите свои данные для
        входа в приложение.\n\t\tВо вкладке \"Диалоги\" показаны Ваши последние диалоги с другими пользователями. При длительном нажатии
        на диалог появляется возможность удалить выбранную переписку (удаление производится только на устройстве удаляющего переписку).
        \n\t\tВ диалоге с конкретным пользователем, при длительном нажатии на сообщение, появляется возможность удалить сообщение у себя
        (для всех сообщений). Если сообщение принадлежит Вам, появляется возможность удалить сообщение как у себя, так и у собеседника,
        а также появляется возможность редактировать выбранное сообщение.
        \n\t\tВо вкладке \"Профиль\" Вы можете редактировать данные своего профиля, а также можете удалить свой аккаунт.
        \n\t\tВо вкладке \"Выбор пользователя\" Вы можете написать сообщение выбранному пользователю.
        \n\n\tАвтор приложения - Бай М.О.
    </string>
</resources>
