<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainActivity_background"
    tools:context=".registration.MainActivity" >


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_image_view_avatar_main_activity"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="80dp"
        android:elevation="2dp"
        app:civ_border_width="4dp"
        tools:src="@tools:sample/avatars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle_image_view_avatar_main_activity">

        <EditText
            android:id="@+id/editText_username_registration"
            style="@style/EditTextRegistration"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_editText_username"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText_email_registration"
            style="@style/EditTextRegistration"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_editText_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editText_password_registration"
            style="@style/EditTextRegistration"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_editText_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_register"
            style="@style/ButtonRegistration"
            android:text="@string/registration_button" />

        <TextView
            android:id="@+id/textView_already_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/already_registered"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="17sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
